Fix some code align

--- a/core/grids/flex-grid.scss
+++ b/core/grids/flex-grid.scss
@@ -24,10 +24,10 @@
 
     @include _addFlexGridViewprtColumns($from-mobile-portrait,  $mobilePortraitColums,  $selector, $enableColumns);
     @include _addFlexGridViewprtColumns($from-mobile-landscape, $mobileLandscapeColums, $selector, $enableColumns);
-    @include _addFlexGridViewprtColumns($from-tablet-portrait,      $tabletPortraitColums,      $selector, $enableColumns);
-    @include _addFlexGridViewprtColumns($from-tablet-landscape,     $tabletLandscapeColums,     $selector, $enableColumns);
-    @include _addFlexGridViewprtColumns($from-hd-ready,             $hdReadyColums,             $selector, $enableColumns);
-    @include _addFlexGridViewprtColumns($from-hd-full,              $hdFullColums,              $selector, $enableColumns);
+    @include _addFlexGridViewprtColumns($from-tablet-portrait,  $tabletPortraitColums,  $selector, $enableColumns);
+    @include _addFlexGridViewprtColumns($from-tablet-landscape, $tabletLandscapeColums, $selector, $enableColumns);
+    @include _addFlexGridViewprtColumns($from-hd-ready,         $hdReadyColums,         $selector, $enableColumns);
+    @include _addFlexGridViewprtColumns($from-hd-full,          $hdFullColums,          $selector, $enableColumns);
 
 }
 
@@ -35,12 +35,12 @@
     $hdSteps              : 12,
     $tabletSteps          : $hdSteps,
     $mobileSteps          : $tabletSteps,
-    $hdViewportPrefix     : hd-flex-,
-    $tabletViewportPrefix : tablet-flex-,
-    $mobileViewportPrefix : mobile-flex-,
+    $hdViewportPrefix     : "hd-flex-",
+    $tabletViewportPrefix : "tablet-flex-",
+    $mobileViewportPrefix : "mobile-flex-",
     $fillFromViewport     : "mobile-landscape",
     $viewTotalColumns     : true,
-    $columnsSeparator     : -of-,
+    $columnsSeparator     : "-of-",
     $useHdRules           : true,
     $useTabletRules       : true,
     $useMobileRules       : true
@@ -114,5 +114,5 @@
 }
 
 @mixin _setFlexGridColumnStep($currentColumn, $totalColumns) {
-    @include flex-basis(#{(#{100 * $currentColumn}) /$totalColumns}#{"%"});
+    @include flex-basis(#{(#{100 * $currentColumn}) / $totalColumns}#{"%"});
 }
